ShmChannel now supports communication among threads in the same process without using shared memory

--- a/tests/ipc/shm_channel/CMakeLists.txt
+++ b/tests/ipc/shm_channel/CMakeLists.txt
@@ -6,3 +6,5 @@ add_executable(shmc_write shmc_write.cpp $<TARGET_OBJECTS:ipc>)
 target_link_libraries(shmc_write rt)
 add_executable(shmc_read_write shmc_read_write.cpp $<TARGET_OBJECTS:ipc>)
 target_link_libraries(shmc_read_write rt)
+add_executable(shmc_read_write_same_proc shmc_read_write_same_proc.cpp $<TARGET_OBJECTS:ipc>)
+target_link_libraries(shmc_read_write_same_proc rt pthread)
