ShmChannelGpu for one-to-one communication between host and GPU. Change ShmChannel to be a template called ShmChannelBase so that code can be mostly shared between the CPU and GPU version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,10 @@
 cmake_minimum_required(VERSION 3.5)
 
-project(llis)
+project(llis LANGUAGES CXX CUDA)
+
+set(CMAKE_CXX_STANDARD 17)
+
+set(CMAKE_CUDA_FLAGS ${CMAKE_CUDA_FLAGS} --expt-relaxed-constexpr)
 
 include_directories(include)
 
