--- a/src/ipc/CMakeLists.txt
+++ b/src/ipc/CMakeLists.txt
@@ -1,1 +1,4 @@
-add_library(ipc OBJECT shm_channel.cpp)
+add_library(ipc OBJECT shm_channel.cu)
+
+add_library(ipc-gpu OBJECT shm_channel.cu)
+set_target_properties(ipc-gpu PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
