--- a/tests/ipc/shm_channel/CMakeLists.txt
+++ b/tests/ipc/shm_channel/CMakeLists.txt
@@ -8,3 +8,6 @@ add_executable(shmc_read_write shmc_read_write.cpp $<TARGET_OBJECTS:ipc>)
 target_link_libraries(shmc_read_write rt)
 add_executable(shmc_read_write_same_proc shmc_read_write_same_proc.cpp $<TARGET_OBJECTS:ipc>)
 target_link_libraries(shmc_read_write_same_proc rt pthread)
+add_executable(shmc_read_write_cpu_gpu shmc_read_write_cpu_gpu.cu $<TARGET_OBJECTS:ipc-gpu>)
+set_target_properties(shmc_read_write_cpu_gpu PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
+target_link_libraries(shmc_read_write_cpu_gpu rt pthread)
