Scheduler runs jobs in FIFO order

--- a/jobs/helloworld/CMakeLists.txt
+++ b/jobs/helloworld/CMakeLists.txt
@@ -1,1 +1,2 @@
-add_library(job_helloworld SHARED helloworld.cpp)
+add_library(job_helloworld SHARED helloworld.cu $<TARGET_OBJECTS:ipc-gpu>)
+set_target_properties(job_helloworld PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
