Use context to talk to jobs; CoroutineJob

--- a/jobs/cnn/CMakeLists.txt
+++ b/jobs/cnn/CMakeLists.txt
@@ -1,2 +1,3 @@
-add_library(job_cnn SHARED main.cu layer.cu $<TARGET_OBJECTS:job-gpu> $<TARGET_OBJECTS:ipc-gpu>)
+add_library(job_cnn SHARED main.cu layer.cu $<TARGET_OBJECTS:ipc-gpu>)
 set_target_properties(job_cnn PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
+target_link_libraries(job_cnn llis_job_gpu llis_context)
