--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,8 @@ find_package(CUDAToolkit)
 set(CMAKE_CUDA_FLAGS ${CMAKE_CUDA_FLAGS} --expt-relaxed-constexpr)
 include_directories(${CUDAToolkit_INCLUDE_DIRS})
 
+find_package(Boost REQUIRED context)
+
 include_directories(include)
 
 add_subdirectory(src)
