--- a/src/ipc/CMakeLists.txt
+++ b/src/ipc/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_library(ipc OBJECT shm_channel.cu name_format.cpp unix_datagram_socket.cpp)
+set_target_properties(ipc PROPERTIES POSITION_INDEPENDENT_CODE ON)
 
 add_library(ipc-gpu OBJECT shm_channel.cu name_format.cpp unix_datagram_socket.cpp)
 set_target_properties(ipc-gpu PROPERTIES POSITION_INDEPENDENT_CODE ON CUDA_SEPARABLE_COMPILATION ON)
