--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_executable(server server.cpp scheduler.cpp client_connection.cpp registered_job.cpp $<TARGET_OBJECTS:client> $<TARGET_OBJECTS:ipc>)
-target_link_libraries(server rt dl)
+target_link_libraries(server llis_job llis_context rt dl)
 
