A new Gpu2Sched channel

--- a/jobs/CMakeLists.txt
+++ b/jobs/CMakeLists.txt
@@ -1,7 +1,8 @@
 add_subdirectory(helloworld)
 add_subdirectory(helloworld_coroutine)
 add_subdirectory(run_forever)
-add_subdirectory(cnn)
+# Have to fix it before running it
+#add_subdirectory(cnn)
 
 if(TVM_PATH)
     add_subdirectory(tvm)
