--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,11 @@ include_directories(${CUDAToolkit_INCLUDE_DIRS})
 
 find_package(Boost REQUIRED context)
 
+option(MEASURE_BLOCK_TIME "Enable measurement of block time" OFF)
+if(MEASURE_BLOCK_TIME)
+    add_definitions(-DLLIS_MEASURE_BLOCK_TIME)
+endif(MEASURE_BLOCK_TIME)
+
 include_directories(include)
 
 add_subdirectory(src)
