--- a/jobs/CMakeLists.txt
+++ b/jobs/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_subdirectory(helloworld)
 add_subdirectory(helloworld_coroutine)
+add_subdirectory(vec_add_coroutine)
 add_subdirectory(run_forever)
 # Have to fix it before running it
 #add_subdirectory(cnn)
