--- a/src/job/CMakeLists.txt
+++ b/src/job/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_library(llis_job SHARED $<TARGET_OBJECTS:ipc>)
 set_target_properties(llis_job PROPERTIES POSITION_INDEPENDENT_CODE ON CUDA_SEPARABLE_COMPILATION ON)
-target_link_libraries(llis_job Boost::context)
+target_link_libraries(llis_job "-Wl,--no-as-needed" Boost::context "-Wl,--as-needed")
 
 add_library(llis_job_gpu SHARED utils.cu $<TARGET_OBJECTS:ipc-gpu>)
 set_target_properties(llis_job_gpu PROPERTIES POSITION_INDEPENDENT_CODE ON CUDA_SEPARABLE_COMPILATION ON)
@@ -8,4 +8,3 @@ target_link_libraries(llis_job_gpu Boost::context)
 
 add_library(llis_context SHARED context.cpp)
 target_link_libraries(llis_context llis_job)
-
