--- a/jobs/CMakeLists.txt
+++ b/jobs/CMakeLists.txt
@@ -6,7 +6,7 @@ add_subdirectory(run_forever)
 #add_subdirectory(cnn)
 
 if(TVM_PATH)
-    add_subdirectory(tvm)
+    add_subdirectory(tvm_mnist)
     add_subdirectory(tvm_mobilenet)
     add_subdirectory(tvm_resnet18)
 endif(TVM_PATH)
