Add a bunch of jobs

--- a/jobs/CMakeLists.txt
+++ b/jobs/CMakeLists.txt
@@ -9,5 +9,11 @@ if(TVM_PATH)
     add_subdirectory(tvm_mnist)
     add_subdirectory(tvm_mobilenet)
     add_subdirectory(tvm_resnet18)
+    add_subdirectory(tvm_inception_v3)
+    add_subdirectory(tvm_googlenet)
+    add_subdirectory(tvm_ultraface320)
+    add_subdirectory(tvm_densenet121)
+    add_subdirectory(tvm_arcfaceresnet100)
+    add_subdirectory(tvm_resnet50)
 endif(TVM_PATH)
 
