Aggregated block notification

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,11 @@ if(MEASURE_BLOCK_TIME)
     add_definitions(-DLLIS_MEASURE_BLOCK_TIME)
 endif(MEASURE_BLOCK_TIME)
 
+option(FINISHED_BLOCK_NOTIFICATION_AGG "Aggregate block notifications" OFF)
+if(FINISHED_BLOCK_NOTIFICATION_AGG)
+    add_definitions(-DLLIS_FINISHED_BLOCK_NOTIFICATION_AGG)
+endif(FINISHED_BLOCK_NOTIFICATION_AGG)
+
 option(SCHED_FIFO "FIFO scheduler" OFF)
 if(SCHED_FIFO)
     add_definitions(-DLLIS_SCHED_FIFO)
