--- a/tests/client/CMakeLists.txt
+++ b/tests/client/CMakeLists.txt
@@ -16,6 +16,9 @@ target_link_libraries(test_client_concurrent_run_latencies_set_load dl rt)
 add_executable(test_client_concurrent_run_latencies_set_load_multi client_concurrent_run_latencies_set_load_multi.cpp $<TARGET_OBJECTS:client> $<TARGET_OBJECTS:ipc>)
 target_link_libraries(test_client_concurrent_run_latencies_set_load_multi dl rt)
 
+add_executable(test_client_concurrent_run_latencies_fixed_num_multi client_concurrent_run_latencies_fixed_num_multi.cpp $<TARGET_OBJECTS:client> $<TARGET_OBJECTS:ipc>)
+target_link_libraries(test_client_concurrent_run_latencies_fixed_num_multi dl rt)
+
 add_executable(test_raw_kernel_launch raw_kernel_launch.cu $<TARGET_OBJECTS:ipc-gpu>)
-target_link_libraries(test_raw_kernel_launch dl rt)
+target_link_libraries(test_raw_kernel_launch llis_job dl rt)
 set_target_properties(test_raw_kernel_launch PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
