Add some error checks and logging

--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -1,1 +1,2 @@
 add_library(client OBJECT client.cpp job_ref.cpp job_instance_ref.cpp profiler_client.cpp)
+target_link_libraries(client spdlog::spdlog)
