Make scheduler selectable at runtime; better argument parsing; Minor fix of CMakeLists; Minor clean up

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ find_package(CUDAToolkit)
 
 include_directories(${CUDAToolkit_INCLUDE_DIRS})
 
-find_package(Boost REQUIRED system context)
+find_package(Boost REQUIRED system context program_options)
 
 find_package(spdlog REQUIRED)
 
@@ -19,30 +19,10 @@ if(MEASURE_BLOCK_TIME)
     add_definitions(-DLLIS_MEASURE_BLOCK_TIME)
 endif(MEASURE_BLOCK_TIME)
 
-option(FINISHED_BLOCK_NOTIFICATION_AGG "Aggregate block notifications" OFF)
+option(FINISHED_BLOCK_NOTIFICATION_AGG "Aggregate block notifications" ON)
 if(FINISHED_BLOCK_NOTIFICATION_AGG)
     add_definitions(-DLLIS_FINISHED_BLOCK_NOTIFICATION_AGG)
 endif(FINISHED_BLOCK_NOTIFICATION_AGG)
-
-option(SCHED_FIFO "FIFO scheduler" OFF)
-if(SCHED_FIFO)
-    add_definitions(-DLLIS_SCHED_FIFO)
-endif(SCHED_FIFO)
-
-option(SCHED_FIFO2 "FIFO2 scheduler" OFF)
-if(SCHED_FIFO2)
-    add_definitions(-DLLIS_SCHED_FIFO2)
-endif(SCHED_FIFO2)
-
-option(SCHED_FULL2 "Full2 scheduler" OFF)
-if(SCHED_FULL2)
-    add_definitions(-DLLIS_SCHED_FULL2)
-endif(SCHED_FULL2)
-
-option(SCHED_FULL3 "Full3 scheduler" OFF)
-if(SCHED_FULL3)
-    add_definitions(-DLLIS_SCHED_FULL3)
-endif(SCHED_FULL3)
 
 option(ENABLE_PROFILER "Enable profiler" OFF)
 if(ENABLE_PROFILER)
