Can make install headers; Do not make tests and jobs by default to avoid cyclic dependencies; pull in dependencies of TVM in a better way

--- a/jobs/CMakeLists.txt
+++ b/jobs/CMakeLists.txt
@@ -13,7 +13,13 @@ add_subdirectory(dummy_21)
 # Have to fix it before running it
 #add_subdirectory(cnn)
 
-if(TVM_PATH)
+find_package(tvm)
+
+if(tvm_FOUND)
+    if(TVM_INCLUDE_DIR)
+        include_directories(PUBLIC ${TVM_INCLUDE_DIR})
+    endif(TVM_INCLUDE_DIR)
+
     add_subdirectory(tvm_mnist)
     add_subdirectory(tvm_mobilenet)
     add_subdirectory(tvm_resnet18)
@@ -25,5 +31,5 @@ if(TVM_PATH)
     add_subdirectory(tvm_resnet50)
     add_subdirectory(tvm_resnet34)
     add_subdirectory(tvm_squeezenet1_1)
-endif(TVM_PATH)
+endif(tvm_FOUND)
 
