--- a/jobs/tvm_arcfaceresnet100/CMakeLists.txt
+++ b/jobs/tvm_arcfaceresnet100/CMakeLists.txt
@@ -1,6 +1,4 @@
 add_library(job_tvm_arcfaceresnet100 SHARED tvm_arcfaceresnet100.cpp)
-target_include_directories(job_tvm_arcfaceresnet100 PUBLIC "${TVM_PATH}/include" "${TVM_PATH}/3rdparty/dmlc-core/include" "${TVM_PATH}/3rdparty/dlpack/include")
-target_link_directories(job_tvm_arcfaceresnet100 PUBLIC "${TVM_PATH}/build")
-target_link_libraries(job_tvm_arcfaceresnet100 llis_job llis_context tvm_runtime)
+target_link_libraries(job_tvm_arcfaceresnet100 tvm::tvm_runtime llis_job llis_context)
 install(TARGETS job_tvm_arcfaceresnet100 DESTINATION lib/llis_jobs)
 
